force-app/main/default/objects/Entity_Revenue_Stat__c/Entity_Revenue_Stat__c.object-meta.xml
<CustomObject>
    <label>Entity Revenue Stat</label>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>Entity Revenue Stat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Revenue Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>