force-app/main/default/objects/Entity_Revenue_Stat__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entity Revenue Stats</relationshipLabel>
    <relationshipName>Entity_Revenue_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>