force-app/main/default/objects/Entity_Revenue_Stat__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <label>Debug</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>