force-app/main/default/objects/Entity_Revenue_Stat__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>