force-app/main/default/objects/Entity_Revenue_Stat__c/fields/Outcome_Tax__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Tax__c</fullName>
    <label>Outcome Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>