force-app/main/default/objects/Entity_Revenue_Stat__c/fields/Persons__c.field-meta.xml
<CustomField>
    <fullName>Persons__c</fullName>
    <label>Persons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>