force-app/main/default/objects/Entity_Revenue_Stat__c/fields/Spent_Unit_USD__c.field-meta.xml
<CustomField>
    <fullName>Spent_Unit_USD__c</fullName>
    <label>Spent Unit USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>