force-app/main/default/objects/Entity_Revenue_Stat__c/fields/Tax_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Tax_Fraction__c</fullName>
    <formula>IF(Income_USD__c = 0, 0, Outcome_Tax_USD__c / Income_USD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Fraction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>